<resources>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>
    <string name="app_name">口袋自考</string>
    <string name="pull_down">下拉刷新</string>
    <string name="pull_down_to_refresh">放开刷新</string>
    <string name="pull_down_refreshing">正在刷新</string>
    <string name="pull_up">上拉加载</string>
    <string name="pull_up_to_load">放开加载</string>
    <string name="pull_up_loading">正在加载</string>
    <string name="dialog_loading">努力加载中...</string>
    <string name="skip_unlogin">逛逛先~</string>
    <string name="skip_adv1">最懂你的自考题库</string>
    <string name="skip_adv2">最温暖的同行社区</string>
    <string name="skip_register">注册</string>
    <string name="skip_login">登录</string>
    <string name="skip_disanfang">社交媒体账号登录</string>
    <string name="skip_identify_code">发送验证码</string>
    <string name="main_tab1">刷题</string>
    <string name="main_tab2">资讯</string>
    <string name="main_tab3">我</string>
    <string name="main_tab4">社区</string>
    <string name="personal_unlogin">未登录</string>
    <string name="personal_adv">刷刷习题，就过关！</string>
    <string name="personal_professional">专业</string>
    <string name="personal_subject">科目</string>
    <string name="personal_wallet">我的钱包</string>
    <string name="personal_order">我的订单</string>
    <string name="personal_class">直播课程</string>
    <string name="personal_post">我的帖子</string>
    <string name="personal_reply">我的回复</string>
    <string name="personal_share">推荐好友</string>
    <string name="personal_data">同步数据</string>
    <string name="personal_update">版本更新</string>
    <string name="personal_suggestion">我要吐槽</string>
    <string name="personal_praise">点赞程序猿</string>
    <string name="personal_about">关于我们</string>
    <string name="personal_mine">我</string>
    <string name="personal_edit">修改个人资料</string>
    <string name="personal_article">文章</string>
    <string name="personal_sign_in">签到</string>
    <string name="personal_wrong">错题篮</string>
    <string name="personal_history">考试记录</string>
    <string name="personal_unchoose">未选择</string>
    <string name="personal_unchoose_warning">同学，您还未选择专业哦</string>
    <string name="personal_unlogin_warning">请先登录</string>
    <string name="personal_exit">退出登录</string>
    <string name="personal_my_publish">我发布的帖子</string>
    <string name="personal_my_reply">我回复的帖子</string>
    <string name="personal_set">设置</string>
    <string name="personal_set_nickname">修改昵称</string>
    <string name="personal_set_phone">手机号码</string>
    <string name="personal_set_password">密码修改</string>
    <string name="personal_reset_password">找回密码</string>
    <string name="personal_set_weixin">微信</string>
    <string name="personal_set_weibo">微博</string>
    <string name="personal_set_qq">QQ</string>
    <string name="personal_set_sex">性别</string>
    <string name="personal_set_sex_male">男</string>
    <string name="personal_set_sex_female">女</string>
    <string name="personal_set_sex_nothing">保密</string>
    <string name="personal_complete">完成</string>
    <string name="personal_old_password">原密码</string>
    <string name="personal_new_password">新密码</string>
    <string name="personal_sure_password">再次输入新密码</string>
    <string name="personal_sure">确认</string>
    <string name="personal_update_new">小袋发现新版本啦~~</string>
    <string name="personal_update_none">小袋没有发现新版本~~</string>
    <string name="personal_update_content_new">本次升级主要包括：</string>
    <string name="personal_update_content_none">乖乖去刷题吧！</string>
    <string name="personal_update_sure">迅猛升级</string>
    <string name="personal_update_cancel">残忍拒绝</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_nickname">修改昵称</string>
    <string name="information_title">资讯</string>
    <string name="information_daily">每日芝士</string>
    <string name="information_question">常见问题解答</string>
    <string name="information_push">历史资讯推送</string>
    <string name="information_road">自考路上</string>
    <string name="information_message">报考讯息</string>
    <string name="information_news">新闻看点</string>
    <string name="information_problem">常见问题</string>
    <string name="information_type">资讯版块</string>
    <string name="information_floor">楼</string>
    <string name="information_detail_discuss">跟帖</string>
    <string name="information_detail_hot_discuss">热门跟帖</string>
    <string name="information_detail_praise">点赞</string>
    <string name="information_detail_share">分享到</string>
    <string name="information_detail_publish">发表</string>
    <string name="information_detail_discuss_content">没事儿写两句</string>
    <string name="information_detail_discuss_more">查看更多跟帖</string>
    <string name="brush_main_search">搜索</string>
    <string name="question_detail_collect">收藏</string>
    <string name="question_detail_show_answer">讲解</string>
    <string name="question_detail_discuss_content">我要吐槽这道题目！</string>
    <string name="question_detail_type_single">[单选]</string>
    <string name="question_detail_type_multiple">[多选]</string>
    <string name="question_detail_label_real">真题</string>
    <string name="question_detail_label_forecast">预测</string>
    <string name="question_detail_label_submit">提交</string>
    <string name="question_detail_toast">请先选择答案！</string>
    <string name="question_detail_result1_up">其实吧 ~</string>
    <string name="question_detail_result1_down">这道题是酱紫滴</string>
    <string name="question_detail_result2_up">呜呜呜</string>
    <string name="question_detail_result2_down">答错啦！</string>
    <string name="question_detail_result3_up">回答正确！</string>
    <string name="question_detail_result3_down">再接再厉！</string>
    <string name="question_detail_point">知识点</string>
    <string name="question_detail_statistics">统计</string>
    <string name="question_detail_total_wrong">错误率</string>
    <string name="question_detail_my_wrong">我的错误率</string>
    <string name="question_detail_master">知识点掌握</string>
    <string name="question_detail_discuss">同学吐槽</string>
    <string name="question_detail_all_discuss1">所有吐槽（</string>
    <string name="question_detail_all_discuss2">）</string>
    <string name="question_discuss_all1">共</string>
    <string name="question_discuss_all2">条吐槽</string>
    <string name="question_discuss_more">更多回复....</string>
    <string name="knowlege_point_level">掌握要求</string>
    <string name="knowlege_point_explain">知识点讲解</string>
    <string name="knowlege_point_topic">真题练练手</string>
    <string name="knowlege_point_exercise">来一发练习题</string>
    <string name="brush_ranking_title">刷题排行</string>
    <string name="brush_ranking_tab1">今天</string>
    <string name="brush_ranking_tab2">本周</string>
    <string name="brush_ranking_tab3">本月</string>
    <string name="brush_ranking_tab4">全部</string>
    <string name="brush_rankint_find_me">找找我在哪？</string>
    <string name="brush_rankint_share">分享战果</string>
    <string name="brush_rankint_accuracy">正确率</string>
    <string name="my_mistake_title">错题篮</string>
    <string name="my_mistake_title_delete">错题篮-删除错题</string>
    <string name="my_mistake_complete">完成</string>
    <string name="my_mistake_delete">删除</string>
    <string name="my_mistake_today">今天</string>
    <string name="my_mistake_yesterday">昨天</string>
    <string name="my_mistake_lastweek">上周</string>
    <string name="favorite_title">收藏夹</string>
    <string name="favorite_pro">题目</string>
    <string name="favorite_forum">帖子</string>
    <string name="simulation_history_title">模考历史</string>
    <string name="suggestion_title">意见反馈</string>
    <string name="suggestion_text1">对我们的意见，请随时吐槽给我们</string>
    <string name="suggestion_text2">小袋将跑马飞奔地满足你的要求</string>
    <string name="choose_profession_title">选择专业</string>
    <string name="choose_profession_step1">学习第一步，选定要就读的专业</string>
    <string name="choose_profession_step2">学习第二步，选定要刷题的科目</string>
    <string name="choose_profession_introduce">小袋将为您准备最新最全的题库与讲解</string>
    <string name="choose_profession_province">所在省份</string>
    <string name="choose_profession">所学专业</string>
    <string name="choose_profession_save">保存</string>
    <string name="choose_profession_suggestion">没有您的省份与专业？</string>
    <string name="choose_subject">所考科目</string>
    <string name="choose_save">保存</string>
    <string name="bbs_title">社区</string>
    <string name="bbs_post">帖</string>
    <string name="bbs_hot_post">24小时热帖</string>
    <string name="bbs_sections">版</string>
    <string name="bbs_hot_sections">24小时热门版块</string>
    <string name="bbs_to_follow">点击关注</string>
    <string name="bbs_follow">已关注</string>
    <string name="bbs_un_follow">未关注</string>
    <string name="bbs_cancel_follow">取消关注</string>
    <string name="bbs_time_second">秒前</string>
    <string name="bbs_time_min">分钟前</string>
    <string name="bbs_time_hour">小时前</string>
    <string name="bbs_time_day">天前</string>
    <string name="bbs_time_mon">月前</string>
    <string name="bbs_time_year">年前</string>
    <string name="bbs_section_all">全部</string>
    <string name="bbs_section_elite">精</string>
    <string name="bbs_section_elite1">精华</string>
    <string name="bbs_section_publish">发表</string>
    <string name="bbs_section_top">置顶</string>
    <string name="txt_getMsgCode_validat">再次发送</string>
    <string name="bbs_floor_host">楼主</string>
    <string name="bbs_reply">回复</string>
    <string name="bbs_publish">发表</string>
    <string name="bbs_image1">已选</string>
    <string name="bbs_image2">张，还剩</string>
    <string name="bbs_image3">张可选</string>
    <string name="bbs_add_post">发布主题</string>
    <string name="bbs_add_title">标题</string>
    <string name="about_title">关于口袋自考</string>
    <string name="about_er">二维码扫描</string>
    <string name="about_weibo">关注官方微博</string>
    <string name="about_weixin">关注微信订阅号</string>
    <string name="about_down1">使用条款与隐私政策</string>
    <string name="about_down2">北京口袋学习科技有限公司 版权所有</string>
    <string name="about_down3">Copyright @ 2015 All Rights Reserved</string>
    <string name="about_down4">据说每三个自考学员，就有一个在用口袋自考</string>
    <string name="about_down5">快让你的小伙伴扫二维码下载吧~~</string>
    <string name="share">推荐给更多的小伙伴来刷题吧~</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="error_service">服务器错误，请稍后再试</string>
    <string name="guide_no">NO！</string>
    <string name="guide1_top1">还在死磕砖一样的教材？</string>
    <string name="guide1_top2">动动手指头刷刷题就搞定！</string>
    <string name="guide2_top1">还在纠结花多少钱上培训班？</string>
    <string name="guide2_top2">全科知识点习题真题全免费！</string>
    <string name="guide3_top1">还在遗憾错过各类讯息通知？</string>
    <string name="guide3_top2">一手自考资讯让你一触即达！</string>
    <string name="guide4_top1">还在一人孤军奋战？</string>
    <string name="guide4_top2">万千小伙伴在召唤你温暖你！</string>
    <string name="brush_str1">今日刷题</string>
    <string name="brush_str2">道，排名</string>
    <string name="brush_str3">打败了</string>
    <string name="brush_str4">的学员</string>
    <string name="loading_video">Loading video…</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
</resources>