<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff59c00" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/text_guide4_top1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/guide4_top1" />
    <TextView android:textSize="29.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/text_guide4_top2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/guide_no" />
    <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/text_guide4_top3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/guide4_top2" />
    <TextView android:layout_width="fill_parent" android:layout_height="40.0dip" />
    <ImageView android:id="@id/image_guide4" android:background="@drawable/guide4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_name" />
</LinearLayout>