<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/activity_color" android:layout_width="fill_parent" android:layout_height="@dimen/activity_title">
        <Button android:id="@id/button_code_back" android:background="@null" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/screen_side" android:drawableLeft="@drawable/bt_back" />
        <TextView android:textSize="@dimen/text_title" android:textColor="#ffffffff" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/about_er" android:layout_weight="1.0" />
        <Button android:id="@id/button_code_share" android:background="@drawable/bt_share" android:layout_width="21.0dip" android:layout_height="21.0dip" android:layout_marginRight="@dimen/screen_side" />
    </LinearLayout>
    <ImageView android:id="@id/image_code" android:background="@drawable/er_wei_ma_test" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="40.0dip" android:contentDescription="@string/app_name" />
    <TextView android:textSize="15.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/about_down4" />
    <TextView android:textSize="15.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/about_down5" />
</LinearLayout>