<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="17.0sp" android:textColor="#ff666666" android:gravity="center" android:layout_gravity="right" android:id="@id/skip_ll" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/screen_side" android:text="@string/skip_unlogin" android:drawableRight="@drawable/know_jiangtou" android:drawablePadding="11.0dip" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="130.0dip">
        <ImageView android:id="@id/skip_logo" android:background="@drawable/skip_logo" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginBottom="@dimen/screen_side" android:contentDescription="@string/app_name" />
        <ImageView android:id="@id/image_skip_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/app_name" />
    </LinearLayout>
    <Button android:textSize="17.0sp" android:textColor="@color/activity_color" android:id="@id/login" android:background="@drawable/login_bg" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="21.0dip" android:layout_marginTop="69.0dip" android:layout_marginRight="21.0dip" android:text="@string/skip_login" />
    <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:id="@id/regist" android:background="@drawable/regist" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="21.0dip" android:layout_marginTop="27.0dip" android:layout_marginRight="21.0dip" android:text="@string/skip_register" />
</LinearLayout>