<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff7f8f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/activity_color" android:layout_width="fill_parent" android:layout_height="@dimen/activity_title">
        <Button android:id="@id/button_suggestion_back" android:background="@null" android:layout_width="40.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/screen_side" android:drawableLeft="@drawable/bt_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/text_title" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suggestion_title" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:background="#ffffffff" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/image_suggestion" android:background="@drawable/suggestion_log" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="30.0dip" android:contentDescription="@string/app_name" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_toRightOf="@id/image_suggestion" android:layout_centerVertical="true">
            <TextView android:textSize="15.0sp" android:textColor="@color/activity_color" android:id="@id/text_suggestion_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/suggestion_text1" />
            <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/suggestion_text2" android:layout_below="@id/text_suggestion_text1" />
        </LinearLayout>
    </RelativeLayout>
    <EditText android:textSize="15.0sp" android:textColor="#ff666666" android:gravity="center|left|top" android:id="@id/edit_suggestion" android:background="@drawable/edit_suggestion" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_margin="10.0dip" android:layout_marginTop="15.0dip" />
    <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/button_suggestion_submit" android:background="@drawable/bt_choose_professional" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/question_detail_label_submit" />
</LinearLayout>