<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/activity_color" android:layout_width="fill_parent" android:layout_height="@dimen/activity_title">
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/text_brush_ranking_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brush_ranking_title" android:layout_centerInParent="true" />
        <Button android:id="@id/button_brush_ranking_back" android:background="@drawable/finish_white" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="15.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="#fff7f8f8" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="15.0sp" android:textColor="#ff808080" android:gravity="center" android:id="@id/button_brush_rank_tab1" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/brush_ranking_tab1" android:layout_weight="1.0" />
        <Button android:textSize="15.0sp" android:textColor="#ff808080" android:gravity="center" android:id="@id/button_brush_rank_tab2" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/brush_ranking_tab2" android:layout_weight="1.0" />
        <Button android:textSize="15.0sp" android:textColor="#ff808080" android:gravity="center" android:id="@id/button_brush_rank_tab3" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/brush_ranking_tab3" android:layout_weight="1.0" />
        <Button android:textSize="15.0sp" android:textColor="#ff808080" android:gravity="center" android:id="@id/button_brush_rank_tab4" android:background="@null" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/brush_ranking_tab4" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#fff7f8f8" android:paddingLeft="15.0dip" android:paddingTop="7.5dip" android:paddingRight="15.0dip" android:paddingBottom="7.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/image_brush_rank_tab1" android:background="@color/activity_color" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" android:contentDescription="@string/app_name" />
        <ImageView android:id="@id/image_brush_rank_tab2" android:background="@color/activity_color" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" android:contentDescription="@string/app_name" />
        <ImageView android:id="@id/image_brush_rank_tab3" android:background="@color/activity_color" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" android:contentDescription="@string/app_name" />
        <ImageView android:id="@id/image_brush_rank_tab4" android:background="@color/activity_color" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" android:contentDescription="@string/app_name" />
    </LinearLayout>
    <android.support.v4.view.ViewPager android:id="@id/viewpager_brush_ranking" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>